# baphy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml  trunk-check.yml
.trunk/: trunk.yaml
baphy/: choices.py  main.py  setup_project.py  template_engine.py
baphy/cli/: __init__.py  query_package_manager.py  query_project_info.py  query_project_type.py  query_testing_framework.py  welcome.py
baphy/src/: facade.py  welcome.py
baphy/src/queries/: project_name.py
baphy/templates/: CMakeLists.jinja
baphy/templates/executable_app/: .gitignore.jinja  CMakeLists.jinja  conanfile.py.jinja
tests/test_example/: test_example.py
tests/tests_queries/tests_project_info/: test_project_name.py
