[tool.poetry]
name = "baphy"
version = "0.1.0"
description = ""
authors = ["evilenzo <lingertell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
questionary = "^2.0.1"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"

[tool.poetry.scripts]
baphy = "baphy.main:cli"
