[tool.poetry]
name = "baphy"
version = "0.1.0"
description = ""
authors = ["evilenzo <lingertell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
questionary = "^2.0.1"
rich = "^13.7.1"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"
rgbprint = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pylint = "^3.2.5"
black = "^24.4.2"
poethepoet = "^0.27.0"
coverage = "^7.6.0"

[tool.poetry.scripts]
baphy = "baphy.main:cli"

[tool.poe.tasks]
test = "poetry run pytest"